--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -4,7 +4,11 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
+        link(rel="stylesheet", href="https://unpkg.com/mvp.css")
         title Document
     body 
-        
+        header 
+            h1 Noom 
+        main 
+            h2 Welcom to Noom
         script (src="/public/js/app.js")
