--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -9,6 +9,12 @@ html(lang="en")
     body 
         header 
             h1 Noom 
-        main 
-            h2 Welcom to Noom
-        script (src="/public/js/app.js")
+        main
+            form#nick
+                    input(type="text", required, placeholder="Choose a nickname")
+                    button Save 
+            ul
+            form#message
+                input(type="text", required, placeholder="write a msg")
+                button Send
+        script(src="/public/js/app.js")
